ETHO-5/Etho-5/force-app/main/default/objects/Partida__c/Partida__c.object-meta.xml
<CustomObject>
    <description>Jogo de cada round</description>
    <label>Partida</label>
    <nameField>
        <label>Nome de Partida</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partidas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>