ETHO-5/Etho-5/force-app/main/default/objects/Partida__c/fields/Cronometro__c.field-meta.xml
<CustomField>
    <fullName>Cronometro__c</fullName>
    <description>Cronometro</description>
    <formula>if(ISBLANK(TerminoPartida__c ),0,
if(TerminoPartida__c &gt; now(), TerminoPartida__c - now(),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cronometro</inlineHelpText>
    <label>Cronômetro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>