ETHO-5/Etho-5/force-app/main/default/objects/Partida__c/fields/SolicitaInicioPartida__c.field-meta.xml
<CustomField>
    <fullName>SolicitaInicioPartida__c</fullName>
    <description>Usado no processo de aprovação para iniciar partida</description>
    <inlineHelpText>Status da aprovação</inlineHelpText>
    <label>Solicitação de Inicio da Partida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Solicitado</fullName>
                <default>true</default>
                <label>Não Solicitado</label>
            </value>
            <value>
                <fullName>Em Aprovação</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>