ETHO-5/Etho-5/force-app/main/default/objects/Partida__c/fields/TerminoPartida__c.field-meta.xml
<CustomField>
    <fullName>TerminoPartida__c</fullName>
    <description>Data do término da partida</description>
    <inlineHelpText>Data do término da partida</inlineHelpText>
    <label>Témino da Partida</label>
    <type>DateTime</type>
</CustomField>